  PostgreSQL Dialect : PostgreSQL 8.2.6 ( JDBC3 Driver )
  
Release 1.1

* Refactored domain system for support of size, decimal digits and radix
* Added model modification tracker to track model changes
* Removed generic jdbc dialect
* Added unit tests for MySQL, MSSQL, Oracle and Postgres dialect
* Added first beta of DB2 support
* Removed domain dictionary ( Now in Table editor )
* Removed default value dictionary ( Now in Table editor )
* Added Exception notifier dialog
* Added SQL Browser window
* Added export functionality for DDL scripts for whole model
* Added export functionality for DDL scripts of last changes
* Added saving of model modifications in separate SQL files

Release 1.1.1

* Bug Fixing in Squirrel Plugin ( Connection was closed during Reverse Engineering )
* Bug Fixing in Squirrel Plugin ( DDL Generation fails in PluginMode )

Release 1.2

* Bug Fixing for some Swing Layouts to make them viewable in Netbeans
* Implemented Layouters powered by Eclipse ZEST and JUNG
* Bug Fixing 1886490 [ERDesignerNG] Default values not respected
* Bug Fixing 1886489 [ERDesignerNG] Reverse engineering / MySQL AUTO_INCREMENT
* Implemented Complete Compare fuctionality
* A backup of the original MXM file is now made for security reasons

Release 1.2.1

* Several bug fixes preventing the complete compare to work in some
  conditions
  
Release 1.2.2

* Bug Fixing 1899736 [ERDesignerNG] English should be default locale
* Bug Fixing 1891226 [ERDesignerNG] Scale not defaults to 10
* Bug Fixing 1891017 [ERDesignerNG] UI hangs if re throws exception
* Bug Fixing 1890979 [ERDesignerNG] Complete compare fails sometimes
* Bug Fixing 1899732 [ERDesignerNG] Fails to reverse engineer oracle columns

Release 1.2.3

* Implemented FR 1899729 [ERDesignerNG] Table selection for reverse engineer
* Implemented FR 1905362 [ERDesignerNG] Reuse current model during reverse enginer
* Implemented FR 1903318 [ERDesignerNG] Add support for subject areas